--- a/hw-4/index.html
+++ b/hw-4/index.html
@@ -13,7 +13,7 @@
         <div>
             <div>
                 <svg class="cloud_logo">
-                    <use xlink:href="sprite.svg#cloud_lg"></use>
+                    <use xlink:href="sprite.svg#logo_cloud"></use>
                 </svg>
             </div>
             <div class="logo">CloudBudget</div>
@@ -32,7 +32,7 @@
             <div class="language">EN</div>
         </div>
         <div class="vector">
-            <svg class="caret"><use xlink:href="sprite.svg#arrow_down"></use>
+            <svg class="caret"><use xlink:href="sprite.svg#arrow_d"></use>
             </svg>
         </div>
         <a href="#"><button class="click">login</button></a>
